--- a/測試/CrewAI-Tutorial.ipynb
+++ b/測試/CrewAI-Tutorial.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,18 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 上面可以先不指定用哪一個 llm，這裡再指定就可以\n",
     "researcher.llm = gemini\n",
-    "writer.llm = ollama"
+    "writer.llm = ollama_solar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Overriding of current TracerProvider is not allowed\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate your crew with a sequential process\n",
     "crew = Crew(\n",
@@ -207,9 +215,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG]: Working Agent: Senior Research Analyst\n",
+      "[INFO]: Starting Task: Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
+      "  Identify key trends, breakthrough technologies, and potential industry impacts.\n",
+      "  Your final answer MUST be a full analysis report\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: Do I need to use a tool? Yes\n",
+      "Action: Search the internet\n",
+      "Action Input: latest advancements in AI in 2024\u001b[0mTool search the internet has been used.\n",
+      "\u001b[93m \n",
+      "\n",
+      "Title: 10 top AI and machine learning trends for 2024 | TechTarget\n",
+      "Link: https://www.techtarget.com/searchenterpriseai/tip/9-top-AI-and-machine-learning-trends\n",
+      "Snippet: 10 top AI and machine learning trends for 2024 · 1. Multimodal AI · 2. Agentic AI · 3. Open source AI · 4. Retrieval-augmented generation · 5.\n",
+      "\n",
+      "-----------------\n",
+      "Title: What's next for AI in 2024 - MIT Technology Review\n",
+      "Link: https://www.technologyreview.com/2024/01/04/1086046/whats-next-for-ai-in-2024/\n",
+      "Snippet: In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a ...\n",
+      "\n",
+      "-----------------\n",
+      "Title: Five Key Trends in AI and Data Science for 2024\n",
+      "Link: https://sloanreview.mit.edu/article/five-key-trends-in-ai-and-data-science-for-2024/\n",
+      "Snippet: Five Key Trends in AI and Data Science for 2024 · 1. Generative AI sparkles but needs to deliver value. · 2. Data science is shifting from ...\n",
+      "\n",
+      "-----------------\n",
+      "Title: How 2024 Will Be A.I.'s 'Leap Forward' - The New York Times\n",
+      "Link: https://www.nytimes.com/2024/01/08/technology/ai-robots-chatbots-2024.html\n",
+      "Snippet: A.I. is set to advance at a rapid rate, becoming more powerful and spreading into the physical world.\n",
+      "\n",
+      "-----------------\n",
+      "\u001b[00m\n",
+      "\u001b[32;1m\u001b[1;3mDo I need to use a tool? Yes\n",
+      "Action: Search the internet\n",
+      "Action Input: breakthrough technologies in AI in 2024\u001b[0mTool search the internet has been used.\n",
+      "\u001b[93m \n",
+      "\n",
+      "Title: AI for everything: 10 Breakthrough Technologies 2024\n",
+      "Link: https://www.technologyreview.com/2024/01/08/1085096/artificial-intelligence-generative-ai-chatgpt-open-ai-breakthrough-technologies/\n",
+      "Snippet: 10 Breakthrough Technologies · AI for everything · Super-efficient solar cells · Apple Vision Pro · Weight-loss drugs · Enhanced geothermal ...\n",
+      "\n",
+      "-----------------\n",
+      "Title: MIT Technology Review releases 2024 list of 10 Breakthrough ...\n",
+      "Link: https://www.prnewswire.com/news-releases/mit-technology-review-releases-2024-list-of-10-breakthrough-technologies-302028547.html\n",
+      "Snippet: The 23rd annual list recognizes important technological advances in artificial intelligence, biotechnology, climate change, computing, consumer ...\n",
+      "\n",
+      "-----------------\n",
+      "Title: What's next for AI in 2024 - MIT Technology Review\n",
+      "Link: https://www.technologyreview.com/2024/01/04/1086046/whats-next-for-ai-in-2024/\n",
+      "Snippet: In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a ...\n",
+      "\n",
+      "-----------------\n",
+      "Title: 3 scary breakthroughs AI will make in 2024 - Live Science\n",
+      "Link: https://www.livescience.com/technology/artificial-intelligence/3-scary-breakthroughs-ai-will-make-in-2024\n",
+      "Snippet: In 2024, it's likely we'll not only see AI used in weapons systems but also in logistics and decision support systems, as well as research and ...\n",
+      "\n",
+      "-----------------\n",
+      "\u001b[00m\n",
+      "\u001b[32;1m\u001b[1;3mDo I need to use a tool? Yes\n",
+      "Action: Search the internet\n",
+      "Action Input: potential industry impacts of AI in 2024\u001b[0mTool search the internet has been used.\n",
+      "\u001b[93m \n",
+      "\n",
+      "Title: 4 Industries AI Is Expected to Significantly Impact in 2024 | Inc.com\n",
+      "Link: https://www.inc.com/john-hall/4-industries-ai-is-expected-to-significantly-impact-in-2024.html\n",
+      "Snippet: Artificial intelligence may be on the brink of substantially changing how humans interact with the world, including the jobs they do.\n",
+      "\n",
+      "-----------------\n",
+      "Title: How Some Experts See The Future Of AI In 2024 - Forbes\n",
+      "Link: https://www.forbes.com/sites/jenniferkitepowell/2023/12/29/how-some-experts-see-the-future-of-ai-in-2024/\n",
+      "Snippet: Anley believes we will likely see a steady increase in using LLMs and AI assistants in business. \"By the end of 2024, using AI assistants to ...\n",
+      "\n",
+      "-----------------\n",
+      "Title: Here's how AI can usher in a people-first economy in 2024\n",
+      "Link: https://www.weforum.org/agenda/2024/02/ai-artificial-intelligence-people-first-economy/\n",
+      "Snippet: Artificial intelligence (AI) is going to transform business and the economy, but what are its potential benefits and downsides?\n",
+      "\n",
+      "-----------------\n",
+      "Title: 2024 AI Business Predictions - PwC\n",
+      "Link: https://www.pwc.com/us/en/tech-effect/ai-analytics/ai-predictions.html\n",
+      "Snippet: No one yet knows the long-term impact of AI on overall employment, and 2024 will still be too soon for definitive answers. But AI will start to change how ...\n",
+      "\n",
+      "-----------------\n",
+      "\u001b[00m\n",
+      "\u001b[32;1m\u001b[1;3m Do I need to use a tool? No\n",
+      "Final Answer: **Executive Summary**\n",
+      "\n",
+      "The field of artificial intelligence (AI) is rapidly evolving, with new advancements being made all the time. In 2024, we can expect to see even more progress in this area, with new technologies and applications emerging.\n",
+      "\n",
+      "**Key Trends**\n",
+      "\n",
+      "Some of the key trends that we can expect to see in AI in 2024 include:\n",
+      "\n",
+      "* **Increased use of AI in business:** AI is already being used in a variety of business applications, and this trend is expected to continue in 2024. Businesses are increasingly using AI to automate tasks, improve customer service, and gain insights from data.\n",
+      "* **Development of new AI algorithms:** Researchers are constantly developing new AI algorithms, and these new algorithms are making AI more powerful and efficient. In 2024, we can expect to see new algorithms that can solve more complex problems and learn from data more effectively.\n",
+      "* **Increased availability of AI tools and resources:** AI tools and resources are becoming more widely available, making it easier for businesses and individuals to use AI. In 2024, we can expect to see even more AI tools and resources available, making it even easier to get started with AI.\n",
+      "\n",
+      "**Breakthrough Technologies**\n",
+      "\n",
+      "Some of the breakthrough technologies that we can expect to see in AI in 2024 include:\n",
+      "\n",
+      "* **Generative AI:** Generative AI is a type of AI that can create new data or content from scratch. This technology is still in its early stages, but it has the potential to revolutionize many industries, such as entertainment, media, and manufacturing.\n",
+      "* **Quantum computing:** Quantum computing is a new type of computing that uses the principles of quantum mechanics to solve problems that are too complex for traditional computers. Quantum computing has the potential to accelerate the development of AI by enabling AI algorithms to be trained on much larger datasets.\n",
+      "* **Neuromorphic computing:** Neuromorphic computing is a new type of computing that is inspired by the human brain. Neuromorphic computers are designed to be more efficient and powerful than traditional computers, and they have the potential to enable new AI applications that are not possible with traditional computers.\n",
+      "\n",
+      "**Potential Industry Impacts**\n",
+      "\n",
+      "The advancements in AI in 2024 are expected to have a significant impact on a variety of industries, including:\n",
+      "\n",
+      "* **Healthcare:** AI is already being used in a variety of healthcare applications, such as diagnosing diseases, developing new drugs, and providing personalized treatment plans. In 2024, we can expect to see even more AI applications in healthcare, such as AI-powered robots that can perform surgery and AI-powered systems that can monitor patients' health in real time.\n",
+      "* **Transportation:** AI is also being used in a variety of transportation applications, such as self-driving cars, traffic management systems, and logistics planning. In 2024, we can expect to see even more AI applications in transportation, such as AI-powered systems that can optimize traffic flow and AI-powered vehicles that can deliver goods and services.\n",
+      "* **Manufacturing:** AI is also being used in a variety of manufacturing applications, such as quality control, predictive maintenance, and supply chain management. In 2024, we can expect to see even more AI applications in manufacturing, such as AI-powered systems that can optimize production processes and AI-powered robots that can work alongside human workers.\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "The field of AI is rapidly evolving, and we can expect to see even more progress in this area in 2024. New technologies and applications are emerging all the time, and AI is having a significant impact on a variety of industries. Businesses and individuals need to be aware of the latest trends in AI and how these trends can be used to improve their operations and lives.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "[DEBUG]: [Senior Research Analyst] Task output: **Executive Summary**\n",
+      "\n",
+      "The field of artificial intelligence (AI) is rapidly evolving, with new advancements being made all the time. In 2024, we can expect to see even more progress in this area, with new technologies and applications emerging.\n",
+      "\n",
+      "**Key Trends**\n",
+      "\n",
+      "Some of the key trends that we can expect to see in AI in 2024 include:\n",
+      "\n",
+      "* **Increased use of AI in business:** AI is already being used in a variety of business applications, and this trend is expected to continue in 2024. Businesses are increasingly using AI to automate tasks, improve customer service, and gain insights from data.\n",
+      "* **Development of new AI algorithms:** Researchers are constantly developing new AI algorithms, and these new algorithms are making AI more powerful and efficient. In 2024, we can expect to see new algorithms that can solve more complex problems and learn from data more effectively.\n",
+      "* **Increased availability of AI tools and resources:** AI tools and resources are becoming more widely available, making it easier for businesses and individuals to use AI. In 2024, we can expect to see even more AI tools and resources available, making it even easier to get started with AI.\n",
+      "\n",
+      "**Breakthrough Technologies**\n",
+      "\n",
+      "Some of the breakthrough technologies that we can expect to see in AI in 2024 include:\n",
+      "\n",
+      "* **Generative AI:** Generative AI is a type of AI that can create new data or content from scratch. This technology is still in its early stages, but it has the potential to revolutionize many industries, such as entertainment, media, and manufacturing.\n",
+      "* **Quantum computing:** Quantum computing is a new type of computing that uses the principles of quantum mechanics to solve problems that are too complex for traditional computers. Quantum computing has the potential to accelerate the development of AI by enabling AI algorithms to be trained on much larger datasets.\n",
+      "* **Neuromorphic computing:** Neuromorphic computing is a new type of computing that is inspired by the human brain. Neuromorphic computers are designed to be more efficient and powerful than traditional computers, and they have the potential to enable new AI applications that are not possible with traditional computers.\n",
+      "\n",
+      "**Potential Industry Impacts**\n",
+      "\n",
+      "The advancements in AI in 2024 are expected to have a significant impact on a variety of industries, including:\n",
+      "\n",
+      "* **Healthcare:** AI is already being used in a variety of healthcare applications, such as diagnosing diseases, developing new drugs, and providing personalized treatment plans. In 2024, we can expect to see even more AI applications in healthcare, such as AI-powered robots that can perform surgery and AI-powered systems that can monitor patients' health in real time.\n",
+      "* **Transportation:** AI is also being used in a variety of transportation applications, such as self-driving cars, traffic management systems, and logistics planning. In 2024, we can expect to see even more AI applications in transportation, such as AI-powered systems that can optimize traffic flow and AI-powered vehicles that can deliver goods and services.\n",
+      "* **Manufacturing:** AI is also being used in a variety of manufacturing applications, such as quality control, predictive maintenance, and supply chain management. In 2024, we can expect to see even more AI applications in manufacturing, such as AI-powered systems that can optimize production processes and AI-powered robots that can work alongside human workers.\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "The field of AI is rapidly evolving, and we can expect to see even more progress in this area in 2024. New technologies and applications are emerging all the time, and AI is having a significant impact on a variety of industries. Businesses and individuals need to be aware of the latest trends in AI and how these trends can be used to improve their operations and lives.\n",
+      "\n",
+      "\n",
+      "[DEBUG]: Working Agent: Tech Content Strategist\n",
+      "[INFO]: Starting Task: Using the insights provided, develop an engaging blog\n",
+      "  post that highlights the most significant AI advancements.\n",
+      "  Your post should be informative yet accessible, catering to a tech-savvy audience.\n",
+      "  Make it sound cool, avoid complex words so it doesn't sound like AI.\n",
+      "  Your final answer MUST be the full blog post of at least 5 paragraphs using taditional chinese writing.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: To create an engaging blog post, I will make use of my skills in crafting compelling narratives from complex concepts.\n",
+      "Action: I am using my writing ability as a Content Strategist for this task.\n",
+      "Action Input: The given information about AI advancements in 2024 is serving as the foundation for my writing.\u001b[0mI am using my writing ability as a Content Strategist for this task. is not a valid tool, try one of []."
+     ]
+    }
+   ],
    "source": [
     "# crew\n",
     "# Get your crew to work!\n",
