--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -2,29 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nCrewAI 支援 openAI gemini ollama\\n其他本地端大模型待測試\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "CrewAI 支援 openAI gemini ollama\n",
+    "其他本地端大模型待測試\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 匯入依賴庫\n",
     "import os\n",
-    "from crewai import Agent, Task, Crew, Process"
+    "from crewai import Agent, Task, Crew, Process\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -242,69 +254,9 @@
       "\n",
       "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3mUse Tool: duckduckgo_search\n",
-      "Query: \"latest advancements in AI 2024\"\u001b[0m\u001b[93m \n",
+      "Search the internet: \"latest advancements in AI 2024\"\u001b[0m\u001b[93m \n",
       "\n",
-      "In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a million little AI models. State-of-the-art AI models ... This year's trends reflect a deepening sophistication and caution in AI development and deployment strategies, with an eye to ethics, safety and the evolving regulatory landscape. Here are the top 10 AI and machine learning trends to prepare for in 2024. 1. Multimodal AI. Multimodal AI goes beyond traditional single-mode data processing to ... AI has been in products for years. From the smart fridge capable of reminding you to buy milk to the card with Apple's Siri enabled. What they don't have is the processing and reasoning ... Adobe Stock. It's been a year since OpenAI released ChatGPT, opening the door to seamlessly weave AI into the fabric of our daily lives, propelling industries into the future and even prompting ... Here are some important current AI trends to look out for in the coming year. Reality check: more realistic expectations. Multimodal AI. Small (er) language models and open source advancements. GPU shortages and cloud costs. Model optimization is getting more accessible. Customized local models and data pipelines. More powerful virtual agents.\n",
-      "\u001b[00m\n",
-      "\u001b[32;1m\u001b[1;3mFinal Answer: In 2024, the latest advancements in AI are expected to bring forth a plethora of new trends and breakthrough technologies. Some of the key trends identified include:\n",
-      "\n",
-      "1. Multimodal AI: This trend goes beyond traditional single-mode data processing to integrate multiple types of input such as images, text, and audio for more complex AI applications.\n",
-      "2. Smaller (er) Language Models and Open Source Advancements: There is a growing focus on making AI technologies more accessible through smaller language models and open source advancements. This will enable more people to create their own AI models and tinker with the latest innovations in the field.\n",
-      "3. GPU Shortages and Cloud Costs: As AI continues to grow, there may be challenges such as GPU shortages and increasing cloud costs, leading to model optimization becoming more accessible.\n",
-      "4. Model Optimization: Customized local models and data pipelines will become more prevalent, allowing organizations to tailor their AI solutions to their specific needs.\n",
-      "5. More Powerful Virtual Agents: The development of advanced virtual agents is expected to continue, enabling AI-powered assistants to become even more intelligent and capable in handling tasks across various industries.\n",
-      "6. Realistic Expectations: As AI becomes more integrated into daily life, there will be a focus on setting realistic expectations for both the benefits and limitations of AI technologies.\n",
-      "7. Seamless Integration of AI in Daily Life: With advancements like OpenAI's ChatGPT, AI is expected to become an increasingly seamless part of our daily lives, driving innovations across multiple industries.\n",
-      "8. Ethics, Safety, and Evolving Regulatory Landscape: As AI continues to grow and impact society, there will be a deeper focus on ensuring its development adheres to established ethics, safety standards, and evolving regulatory guidelines.\n",
-      "\n",
-      "These trends will undoubtedly have significant impacts on various industries, leading to new innovations and transformations in the way we live and work. As AI continues to advance, it is crucial for organizations and individuals alike to stay informed about these developments and adapt to this ever-evolving landscape.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "[DEBUG]: [Senior Research Analyst] Task output: In 2024, the latest advancements in AI are expected to bring forth a plethora of new trends and breakthrough technologies. Some of the key trends identified include:\n",
-      "\n",
-      "1. Multimodal AI: This trend goes beyond traditional single-mode data processing to integrate multiple types of input such as images, text, and audio for more complex AI applications.\n",
-      "2. Smaller (er) Language Models and Open Source Advancements: There is a growing focus on making AI technologies more accessible through smaller language models and open source advancements. This will enable more people to create their own AI models and tinker with the latest innovations in the field.\n",
-      "3. GPU Shortages and Cloud Costs: As AI continues to grow, there may be challenges such as GPU shortages and increasing cloud costs, leading to model optimization becoming more accessible.\n",
-      "4. Model Optimization: Customized local models and data pipelines will become more prevalent, allowing organizations to tailor their AI solutions to their specific needs.\n",
-      "5. More Powerful Virtual Agents: The development of advanced virtual agents is expected to continue, enabling AI-powered assistants to become even more intelligent and capable in handling tasks across various industries.\n",
-      "6. Realistic Expectations: As AI becomes more integrated into daily life, there will be a focus on setting realistic expectations for both the benefits and limitations of AI technologies.\n",
-      "7. Seamless Integration of AI in Daily Life: With advancements like OpenAI's ChatGPT, AI is expected to become an increasingly seamless part of our daily lives, driving innovations across multiple industries.\n",
-      "8. Ethics, Safety, and Evolving Regulatory Landscape: As AI continues to grow and impact society, there will be a deeper focus on ensuring its development adheres to established ethics, safety standards, and evolving regulatory guidelines.\n",
-      "\n",
-      "These trends will undoubtedly have significant impacts on various industries, leading to new innovations and transformations in the way we live and work. As AI continues to advance, it is crucial for organizations and individuals alike to stay informed about these developments and adapt to this ever-evolving landscape.\n",
-      "\n",
-      "\n",
-      "[DEBUG]: Working Agent: Tech Content Strategist\n",
-      "[INFO]: Starting Task: Using the insights provided, develop an engaging blog\n",
-      "  post that highlights the most significant AI advancements.\n",
-      "  Your post should be informative yet accessible, catering to a tech-savvy audience.\n",
-      "  Make it sound cool, avoid complex words so it doesn't sound like AI.\n",
-      "  Your final answer MUST be the full blog post of at least 5 paragraphs.\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m```\n",
-      "Use Tool: Delegate work to co-worker\n",
-      "coworker: Senior Research Analyst\n",
-      "task: Write an engaging blog post that highlights the most significant AI advancements.\n",
-      "context: In 2024, the latest advancements in AI are expected to bring forth a plethora of new trends and breakthrough technologies. Some of the key trends identified include:\n",
-      "\n",
-      "1. Multimodal AI: This trend goes beyond traditional single-mode data processing to integrate multiple types of input such as images, text, and audio for more complex AI applications.\n",
-      "2. Smaller (er) Language Models and Open Source Advancements: There is a growing focus on making AI technologies more accessible through smaller language models and open source advancements. This will enable more people to create their own AI models and tinker with the latest innovations in the field.\n",
-      "3. GPU Shortages and Cloud Costs: As AI continues to grow, there may be challenges such as GPU shortages and increasing cloud costs, leading to model optimization becoming more accessible.\n",
-      "4. Model Optimization: Customized local models and data pipelines will become more prevalent, allowing organizations to tailor their AI solutions to their specific needs.\n",
-      "5. More Powerful Virtual Agents: The development of advanced virtual agents is expected to continue, enabling AI-powered assistants to become even more intelligent and capable in handling tasks across various industries.\n",
-      "6. Realistic Expectations: As AI becomes more integrated into daily life, there will be a focus on setting realistic expectations for both the benefits and limitations of AI technologies.\n",
-      "7. Seamless Integration of AI in Daily Life: With advancements like OpenAI's ChatGPT, AI is expected to become an increasingly seamless part of our daily lives, driving innovations across multiple industries.\n",
-      "8. Ethics, Safety, and Evolving Regulatory Landscape: As AI continues to grow and impact society, there will be a deeper focus on ensuring its development adheres to established ethics, safety standards, and evolving regulatory guidelines.\n",
-      "```\n",
-      "\n",
-      "```\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mUse Tool: Searches arXiv for the given query\u001b[0m\u001b[32;1m\u001b[1;3mUse Tool: Searches arXiv for the given query\u001b[0m\u001b[91m \n",
-      "\n",
-      "It seems we encountered an unexpected error while trying to use the tool. This was the error: eval() arg 1 must be a string, bytes or code object\n",
+      "In 2024, generative AI might actually become useful for the regular, non-tech person, and we are going to see more people tinkering with a million little AI models. State-of-the-art AI... 10 top AI and machine learning trends for 2024 Custom enterprise models, open source AI, multimodal -- learn about the top AI and machine learning trends for 2024 and how they promise to transform the industry. By Lev Craig, Site Editor Published: 04 Jan 2024 As 2024 unfolds, we will see monumental leaps in AI capabilities, especially in areas demanding complex problem-solving fueled by quantum advancements. published 27 December 2023 While 2023 was the year of AI, 2024 will be the year we use it. (Image credit: Aston Martin/Apple) We have just come to the end of a year where artificial... Artificial intelligence AI for everything: 10 Breakthrough Technologies 2024 Generative AI tools like ChatGPT reached mass adoption in record time, and reset the course of an entire industry....\n",
       "\u001b[00m\n"
      ]
     }
