--- a/測試/CrewAI-Tutorial.ipynb
+++ b/測試/CrewAI-Tutorial.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from crewai_tools import tool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'rag'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msearch_tools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SearchTools\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msec_tools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SECTools\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01myoutube_video_search_tool\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m YoutubeVideoSearchTool\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# 下面添加 tools 時，必須用 類別.方法 加入工具\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# BrowserTools.scrape_and_summarize_website\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# CalculatorTools.calculate\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# SECTools.search_10q、SECTools.search_10k\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# 下面的是依樣畫葫蘆自行加入2行定義類別，親測可以匯入\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfind_papers_arxiv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FindPapersArxiv\n",
+      "File \u001b[1;32md:\\TOMO.Project\\crewAI\\crewAI-examples\\測試\\tools\\youtube_video_search_tool.py:7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01membedchain\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m App\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01membedchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_type\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataType\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrag\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrag_tool\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RagTool\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mFixedYoutubeVideoSearchToolSchema\u001b[39;00m(BaseModel):\n\u001b[0;32m     11\u001b[0m \u001b[38;5;250m\t\u001b[39m\u001b[38;5;124;03m\"\"\"Input for YoutubeVideoSearchTool.\"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'rag'"
+     ]
+    }
+   ],
    "source": [
     "# 設定工具 tools\n",
     "# Make sure to Install duckduckgo-search for this example:\n",
@@ -94,6 +116,7 @@
     "from tools.file_tools import FileTools\n",
     "from tools.search_tools import SearchTools\n",
     "from tools.sec_tools import SECTools\n",
+    "from tools.youtube_video_search_tool import YoutubeVideoSearchTool\n",
     "# 下面添加 tools 時，必須用 類別.方法 加入工具\n",
     "# BrowserTools.scrape_and_summarize_website\n",
     "# CalculatorTools.calculate\n",
