--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -2,30 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nCrewAI 支援 openAI gemini ollama\\n其他本地端大模型待測試\\n'"
+       "'\\nCrewAI 支援 openAI gemini ollama，是 agent 框架裏面對 gemini pro 的支援度比較好的一個框架\\n其他本地端大模型待測試\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "CrewAI 支援 openAI gemini ollama\n",
-    "其他本地端大模型待測試\n",
+    "https://docs.crewai.com/how-to/LLM-Connections/\n",
+    "CrewAI 支援 openAI gemini ollama，是 agent 框架裏面對 gemini pro 的支援度比較好的一個框架\n",
+    "- Setting Up Ollama\n",
+    "Environment Variables Configuration: To integrate Ollama, set the following environment variables:\n",
+    "OPENAI_API_BASE='http://localhost:11434/v1'\n",
+    "OPENAI_MODEL_NAME='openhermes'  # Adjust based on available model\n",
+    "OPENAI_API_KEY=''\n",
+    "\n",
+    "其他本地端大模型待測試(OpenAI Compatible API Endpoints)\n",
+    "- LM Studio\n",
+    "OPENAI_API_BASE=\"http://localhost:8000/v1\"\n",
+    "OPENAI_MODEL_NAME=NA\n",
+    "OPENAI_API_KEY=NA\n",
+    "\n",
+    "- Mistral API\n",
+    "OPENAI_API_KEY=your-mistral-api-key\n",
+    "OPENAI_API_BASE=https://api.mistral.ai/v1\n",
+    "OPENAI_MODEL_NAME=\"mistral-small\"\n",
+    "\n",
+    "- FastChat\n",
+    "OPENAI_API_BASE=\"http://localhost:8001/v1\"\n",
+    "OPENAI_MODEL_NAME='oh-2.5m7b-q51'\n",
+    "OPENAI_API_KEY=NA\n",
+    "\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
