--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -96,6 +96,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "這裡要仿照 crewAI-examples 提供範例的做法。\n",
+    "agents、tasks 都寫成外部的檔案，並從這裡讀取。\n",
+    "tools 可以全部放在 tools 資料夾內，另外匯入。\n",
+    "或是，crewAI-tools 的做法\n",
+    "\"\"\"\n",
+    "from tasks import MarketingAnalysisTasks\n",
+    "from agents import MarketingAnalysisAgents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
