--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -112,6 +112,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from langchain.chat_models.openai import ChatOpenAI\n",
+    "\n",
+    "defalut_llm = ChatOpenAI(openai_api_base=os.environ.get(\"OPENAI_API_BASE_URL\", \"https://api.openai.com/v1\"),\n",
+    "                        openai_api_key=os.environ.get(\"OPENAI_API_KEY\"),\n",
+    "                        temperature=0.1,                        \n",
+    "                        model_name=os.environ.get(\"MODEL_NAME\", \"gpt-3.5-turbo\"),\n",
+    "                        top_p=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
